<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="211dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pills" />

    <Button
        android:id="@+id/btnPastEvents"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:backgroundTint="#2196F3"
        android:text="@string/pastEvent"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAboutUs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAddEvents"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#2196F3"
        android:outlineAmbientShadowColor="#03A9F4"
        android:outlineSpotShadowColor="#03A9F4"
        android:shadowColor="#2196F3"
        android:text="@string/addEvent"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnPastEvents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#03A9F4"
        app:strokeColor="#2196F3" />

    <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:backgroundTint="#2196F3"
        android:text="@string/aboutUs"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/logo"
        android:textColor="#03A9F4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.845" />

</androidx.constraintlayout.widget.ConstraintLayout>