<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/fragment_createalarm_scheduleAlarmHeading"
            android:layout_width="399dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/candal"
            android:text="@string/addEvent"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/dateHint"
            android:textSize="24dp"
            app:layout_constraintBottom_toTopOf="@+id/clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_scheduleAlarmHeading"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/datepicker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/date"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toTopOf="@+id/clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/fragment_createalarm_scheduleAlarmHeading"
            app:layout_constraintVertical_bias="0.96" />

        <TimePicker
            android:id="@+id/clock"
            android:layout_width="390dp"
            android:layout_height="123dp"
            android:layout_weight="0.6"
            android:timePickerMode="spinner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.241" />

        <EditText
            android:id="@+id/medName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/medHint"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clock" />

        <Button
            android:id="@+id/btnAddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#03A9F4"
            android:onClick="onClickAddEvent"
            android:text="@string/addEvent"
            app:layout_constraintBottom_toTopOf="@+id/btnFromEventToMain"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btnFromEventToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:onClick="onClick"
            android:text="@string/backToMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>